[SPv175] Fix transform space of drag images

With Slimming Paint v1.75 (SPv175), PaintLayerPainter paints layer contents in
the containing transform node's space. Not all layers create a transform space,
such as a layer only used as a stacking context. This patch adjusts the painted
output of a drag image by the offset from the layer to the layer's transform
space.

Bug: 823259
Change-Id: Ibd5bdba70979e94e07fd4398999c07eeef62548d
Reviewed-on: https://chromium-review.googlesource.com/979166
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545682}
Former-commit-id: 41f6904a0a73db6d5ef31cc7e8648e743db1d9ee